--- a/components/home-page/starting.module.css
+++ b/components/home-page/starting.module.css
@@ -8,10 +8,16 @@
   align-items: center;
 }
 
-.imageContainer {
+/* .imageContainer {
   width: 100%;
   height: 100%;
   overflow: hidden;
+} */
+
+.imageContainer {
+  min-height: 95vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .imageContainer img {
@@ -74,7 +80,7 @@
   }
 
   .starting h1 {
-    margin:0;
+    margin: 0;
   }
 
   .starting h2 {
